Hash fork vote with validator public key